#3 #69 实验3（修改了实验2部分代码）